# mxlims_data_model

./: .gitignore  .phpunit.result.cache  InitialAims.md  KnownIssues.md  README.md  ReleaseNotes.md  conda-environment.yml  pyproject.toml
contributions/IcebearShipment/: README.txt  ShipmentSchema.json
contributions/JCSG/: README.md
docs/: README.md  schemadoc_config.json
docs/examples/: MxExperiment_interleavedMAD.json  MxExperiment_simple.json  MxlimsMapping_Acquisition.xlsx  MxlimsMapping_Processing.xlsx  README.md  Shipment_multiPositionPins.json  Shipment_plates.json  Shipment_singlePositionPins.json  mapping_0.6.7_preliminary.xlsx
docs/html/: BaseMessageData.html  BasicTypes.html  Circle.html  CollectionSweep.html  CollectionSweepData.html  CollectionSweepRef.html  Crystal.html  CrystalData.html  CrystalRef.html  CrystallographicSample.html  CrystallographicSampleData.html  CrystallographicSampleRef.html  Dataset.html  DatasetData.html  DatasetRef.html  DatasetStub.html  Dewar.html  DewarData.html  DewarRef.html  DropImage.html  DropImageData.html  DropImageUrl.html  DropRegion.html  DropRegionData.html  DropRegionRef.html  ImageRegion.html  ImageRegionUnit.html  Job.html  JobData.html  JobMessage.html  JobRef.html  JobStatus.html  JobStub.html  Line.html  LogisticalSample.html  LogisticalSampleData.html  LogisticalSampleRef.html  LogisticalSampleStub.html  Macromolecule.html  (+86 more)
jsonSchema/: ShipmentSchema.json
meetings/: DevelopersMinutes_20240514_v2.md  Developers_Minutes_20240306.md  MXLIMS_20251217_meeting.md
mxlims/: __init__.py
(+668 files in other folders)
